--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "watch:tailwind": "npx tailwindcss src/style/index.css -o src/style/tailwind.css --watch",
+    "dev": "npm-run-all watch:tailwind -s start",
+    "start:build": "postcss src/style/index.css -o static/dist/tailwind.css",
+    "start:react": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +44,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^6.4.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/react-router-dom": "^5.3.2",
+    "autoprefixer": "^9",
+    "axios": "^0.24.0",
+    "eslint-config-prettier": "^8.3.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^7",
+    "postcss-cli": "8.3.1",
+    "postcss-import": "^14.0.2",
+    "prettier": "^2.4.1",
+    "react-redux": "^7.2.6",
+    "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
